fix header margins (equal top and bottom spacing)

--- a/app/assets/stylesheets/redesign/_vars.css.scss
+++ b/app/assets/stylesheets/redesign/_vars.css.scss
@@ -73,5 +73,5 @@ $bootstrap-md-width: 992px;
 $bootstrap-lg-width: 1200px;
 
 //Fixed header
-$md-content-margin-top: 114px;
+$md-content-margin-top: 106px;
 $fixed-header-with-locale-warn: ($md-content-margin-top + 49px);
