--- a/app/assets/stylesheets/redesign/layout/_header.scss
+++ b/app/assets/stylesheets/redesign/layout/_header.scss
@@ -142,7 +142,8 @@ header.main {
       }
 
       .nav-main-menu {
-        padding-bottom: 35px;
+        padding-bottom: 28px;
+        margin-top: -2px;
 
         span:hover {
           border-color: $c-neutral-black;
